--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "buildroot"]
 	path = buildroot
-	url = https://github.com/buildroot/buildroot
+	url = git@github.com:adnio/buildroot.git
 [submodule "miraclecast"]
 	path = miraclecast
 	url = https://github.com/albfan/miraclecast.git
+[submodule "build"]
+	path = build
+	url = https://github.com/armbian/build.git
